# roller-coaster-builder

./: .gitignore  README.md  package-lock.json  package.json  replit.md
client/src/: App.tsx  index.css
client/src/components/: ErrorBoundary.tsx
client/src/components/game/: Canvas2DEditor.tsx  Canvas2DRideView.tsx  CoasterCar.tsx  EditorGizmos.tsx  GForceDisplay.tsx  GameUI.tsx  Ground.tsx  MiniMap.tsx  ParticleEffects.tsx  PhysicsDebugOverlay.tsx  RideCamera.tsx  Sky.tsx  SoundEffects.tsx  Track.tsx  TrackBuilder.tsx  TrackPoint.tsx
client/src/hooks/: useKeyboardShortcuts.ts  usePhysicsSimulation.tsx
client/src/lib/: trackUtils.ts  webglDetect.ts
client/src/lib/physics/: PhysicsEngine.ts
client/src/lib/stores/: useAudio.tsx  useRollerCoaster.tsx
client/src/lib/wasm/: physicsEngine.ts
native/: CMakeLists.txt  README.md  build.bat  build.sh  physics_engine.cpp
server/: index.ts  storage.ts
shared/: schema.ts
